# chessoteric

./: .gitignore  Cargo.toml  download.sh
core/: Cargo.toml
core/benches/: chessoteric_bench.rs
core/src/: ai.rs  bitboard.rs  board.rs  eval.rs  lib.rs  magic.rs  moves.rs  study.rs  tree.rs
core/src/ai/: chessoteric.rs  random.rs  simple.rs
core/tests/: test_fen.rs  test_study.rs
repl/: Cargo.toml
repl/src/: app.rs  board.rs  main.rs  skin.rs
script/: bitboard.py  lichess_bot.py  tournament.py
scripts/: eval_modif.py  lichess_bot.py  tournament.py
sterm/: Cargo.toml
sterm/src/: main.rs  state.rs
