[package]
name = "chessoteric-core"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "^2"
rand = "^0.10"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
strum = { version = "0.27.2", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1.4.1"

[features]
default = ["study"]
study = []
