[package]
name = "sterm"
version = "0.1.0"
edition = "2024"

[dependencies]
chessoteric-core = { path = "../core", default-features = false }
clap = { version = "4.5.58", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
shell-words = "1.1.1"

[features]
default = ["alpha_beta_soft_pruning", "eval_larry_kaufman"]

alpha_beta_soft_pruning = ["chessoteric-core/alpha_beta_soft_pruning"]
eval_larry_kaufman = ["chessoteric-core/eval_larry_kaufman"]
